# opengl-geometry-dump

./: .gitignore  CMakeLists.txt  README.md
shader/: tf-points.gs  tf-triangles.gs  tf.vs
src/: main.cpp  vertex_geometry_shader.cpp  vertex_geometry_shader.h
